--- a/_posts/2025-04-03-veille.md
+++ b/_posts/2025-04-03-veille.md
@@ -10,6 +10,8 @@ categories: veille
 Today, I experimented with **Jekyll on GitHub Pages**. It's amazing how easy it is to set up a blog with just Markdown files!
 
 
-*   link1
+*   AKS - Azure CNI Overlay
+** https://medium.com/@rickijen/aks-cni-overlay-under-the-hood-29b664c02a04
+** https://open-docs.neuvector.com/
 *   link2
 
