--- a/_posts/2025-04-03-veille.md
+++ b/_posts/2025-04-03-veille.md
@@ -13,5 +13,10 @@ Today, I experimented with **Jekyll on GitHub Pages**. It's amazing how easy it 
 *   AKS - Azure CNI Overlay
     * https://medium.com/@rickijen/aks-cni-overlay-under-the-hood-29b664c02a04
     * https://open-docs.neuvector.com/
-*   link2
+*   AKS - Cilium
+    * https://blog.teknews.cloud/aks/security/network/2025/03/30/Exposing_apps_in_kubernetes-_From_services_to_Gateway_API.html
+    * https://blog.cellenza.com/cloud-2/cilium-cluster-mesh-dans-aks/
+*   AKS - Miscellaneous
+    * https://open-docs.neuvector.com/
+    
 
