--- a/_posts/2025-04-03-veille.md
+++ b/_posts/2025-04-03-veille.md
@@ -18,5 +18,7 @@ Today, I experimented with **Jekyll on GitHub Pages**. It's amazing how easy it 
     * https://blog.cellenza.com/cloud-2/cilium-cluster-mesh-dans-aks/
 *   AKS - Miscellaneous
     * https://open-docs.neuvector.com/
+* Networking
+    * https://techcommunity.microsoft.com/blog/azurenetworkingblog/combining-firewall-protection-and-sd-wan-connectivity-in-azure-virtual-wan/4394880
     
 
