--- a/_posts/2025-04-03-veille.md
+++ b/_posts/2025-04-03-veille.md
@@ -21,4 +21,5 @@ Today, I experimented with **Jekyll on GitHub Pages**. It's amazing how easy it 
 * Networking
     * https://techcommunity.microsoft.com/blog/azurenetworkingblog/combining-firewall-protection-and-sd-wan-connectivity-in-azure-virtual-wan/4394880
     
-
+* AKS agic bicep
+     * https://github.com/paolosalvatori/aks-application-gateway-for-containers-overlay-bicep?tab=readme-ov-file
