--- a/_posts/2025-04-03-veille.md
+++ b/_posts/2025-04-03-veille.md
@@ -9,6 +9,8 @@ categories: veille
 
 Today, I experimented with **Jekyll on GitHub Pages**. It's amazing how easy it is to set up a blog with just Markdown files!
 
+* Tfstate private link https://cloud-cod.com/index.php/2025/01/10/azure-pipeline-self-hosted-agents-and-azure-storage-for-terraform-state/
+
 
 *   AKS - Azure CNI Overlay
     * https://medium.com/@rickijen/aks-cni-overlay-under-the-hood-29b664c02a04
